--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,26 @@
   <title>Трубочист</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="keywords" content="трубочист, дымоход, чистка дымохода, чистка труб, установка, демонтаж" />
+  <meta name="title" content="Профессиональные услуги трубочиста" />
+  <meta name="description" content="У нас Вы можете заказать услуги по чистке, установке и демонтажу дымоходов" />
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+          m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+      ym(55935106, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true
+      });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/55935106" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
 </head>
 <body>
   <app-root></app-root>
